--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,14 @@ body {
       padding: 10px;
       margin-bottom: 10px;
       background-color: #222;
+
+      .buttonArea {
+        margin-top: 5px;
+
+        button {
+          margin-right: 5px;
+        }
+      }
     }
   }
 
